# kanban-python

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/kanban_python/: __init__.py  app.py  cli_parser.py  config.py  constants.py  controls.py  interface.py  skeleton.py  utils.py
tests/: conftest.py  test_config.py  test_interface.py  test_skeleton.py  test_utils.py
