[project]
name = "kanban-python"
version = "0.6.0"
description = "Terminal Kanban App written in Python"
readme = "README.md"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
dependencies = [
    "platformdirs>=4.3.6",
    "rich>=13.9.4",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/Zaloog/kanban-python"
Changelog = "https://github.com/Zaloog/kanban-python/blob/main/CHANGELOG.md"

[project.scripts]
kanban = "kanban_python.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov src/kanban_python --cov-report term-missing --verbose --color=yes"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kanban_python"]
